asgn3/parser.out


Unused terminals:

   PROTECTED
   __HALT_COMPILER
   QUOTE
   CONST_BINARY
   GOTO
   NAMESPACE
   __CLASS__
   __LINE__
   CALLABLE
   EXTENDS
   DECLARE
   TRAIT
   ISSET
   INSTEADOF
   ACCESS_OP
   CONST_OCTAL
   INTERFACE
   OR
   FINAL
   COND_COLON
   TRY
   AND
   ENDDECLARE
   NEW
   END_TAG
   EXPONENT
   START_TAG
   CATCH
   __METHOD__
   IMPLEMENTS
   LIST
   PUBLIC
   USE
   CONST
   DIE
   ABSTRACT
   UNSET
   CONST_HEX
   PRIVATE
   CLASS
   __DIR__
   XOR
   __FILE__
   __FUNCTION__
   __TRAIT__
   __NAMESPACE__
   THROW

Grammar

Rule 1     start -> stmt_list
Rule 2     stmt_list -> stmt_list top_stmt
Rule 3     stmt_list -> empty
Rule 4     top_stmt -> stmt
Rule 5     top_stmt -> func_decl
Rule 6     top_stmt -> VAR const_decls SEMICOLON
Rule 7     const_decls -> const_decls COMMA const_decl
Rule 8     const_decls -> const_decl
Rule 9     const_decl -> IDENTIFIER EQUAL expr
Rule 10    const_decl -> IDENTIFIER
Rule 11    func_decl -> FUNCTION STRING LPAREN params RPAREN LBRACE inner_stmts RBRACE
Rule 12    params -> params COMMA param
Rule 13    params -> param
Rule 14    params -> empty
Rule 15    param -> IDENTIFIER
Rule 16    param -> BIT_AND IDENTIFIER
Rule 17    param -> IDENTIFIER EQUAL scalar
Rule 18    param -> BIT_AND IDENTIFIER EQUAL scalar
Rule 19    stmt -> if_stmt
Rule 20    stmt -> alt_if_stmt
Rule 21    if_stmt -> if_stmt_without_else
Rule 22    if_stmt -> if_stmt_without_else ELSE stmt
Rule 23    if_stmt_without_else -> IF LPAREN expr RPAREN stmt
Rule 24    if_stmt_without_else -> if_stmt_without_else ELSEIF LPAREN expr RPAREN stmt
Rule 25    alt_if_stmt -> alt_if_stmt_without_else ENDIF SEMICOLON
Rule 26    alt_if_stmt -> alt_if_stmt_without_else ELSE COLON inner_stmts ENDIF SEMICOLON
Rule 27    alt_if_stmt_without_else -> IF LPAREN expr RPAREN COLON inner_stmts
Rule 28    alt_if_stmt_without_else -> alt_if_stmt_without_else ELSEIF LPAREN expr RPAREN COLON inner_stmts
Rule 29    stmt -> WHILE LPAREN expr RPAREN while_stmt
Rule 30    while_stmt -> stmt
Rule 31    while_stmt -> COLON inner_stmts ENDWHILE SEMICOLON
Rule 32    stmt -> DO stmt WHILE LPAREN expr RPAREN SEMICOLON
Rule 33    stmt -> FOR LPAREN for_expr SEMICOLON for_expr SEMICOLON for_expr RPAREN for_stmt
Rule 34    for_expr -> empty
Rule 35    for_expr -> non_empty_for_expr
Rule 36    non_empty_for_expr -> non_empty_for_expr COMMA expr
Rule 37    non_empty_for_expr -> expr
Rule 38    for_stmt -> stmt
Rule 39    for_stmt -> COLON inner_stmts ENDFOR SEMICOLON
Rule 40    stmt -> FOREACH LPAREN expr AS foreach_var foreach_arg RPAREN foreach_stmt
Rule 41    foreach_var -> IDENTIFIER
Rule 42    foreach_var -> BIT_AND IDENTIFIER
Rule 43    foreach_arg -> empty
Rule 44    foreach_arg -> DOUBLE_ARROW foreach_var
Rule 45    foreach_stmt -> stmt
Rule 46    foreach_stmt -> COLON inner_stmts ENDFOREACH SEMICOLON
Rule 47    stmt -> SWITCH LPAREN expr RPAREN switch_stmt
Rule 48    switch_stmt -> LBRACE case_stmt RBRACE
Rule 49    switch_stmt -> LBRACE SEMICOLON case_stmt RBRACE
Rule 50    switch_stmt -> COLON case_stmt ENDSWITCH SEMICOLON
Rule 51    switch_stmt -> COLON SEMICOLON case_stmt ENDSWITCH SEMICOLON
Rule 52    case_stmt -> empty
Rule 53    case_stmt -> case_stmt CASE expr case_separator inner_stmts
Rule 54    case_stmt -> case_stmt DEFAULT case_separator inner_stmts
Rule 55    case_separator -> COLON
Rule 56    case_separator -> SEMICOLON
Rule 57    stmt -> BREAK SEMICOLON
Rule 58    stmt -> BREAK expr SEMICOLON
Rule 59    stmt -> CONTINUE SEMICOLON
Rule 60    stmt -> CONTINUE expr SEMICOLON
Rule 61    stmt -> RETURN SEMICOLON
Rule 62    stmt -> RETURN expr SEMICOLON
Rule 63    stmt -> GLOBAL global_var_list SEMICOLON
Rule 64    global_var_list -> global_var_list COMMA IDENTIFIER
Rule 65    global_var_list -> IDENTIFIER
Rule 66    stmt -> STATIC static_var_list SEMICOLON
Rule 67    static_var_list -> static_var_list COMMA static_var
Rule 68    static_var_list -> static_var
Rule 69    static_var -> IDENTIFIER EQUAL scalar
Rule 70    static_var -> IDENTIFIER
Rule 71    stmt -> ECHO echo_expr_list SEMICOLON
Rule 72    echo_expr_list -> echo_expr_list COMMA expr
Rule 73    echo_expr_list -> expr
Rule 74    stmt -> LBRACE inner_stmts RBRACE
Rule 75    stmt -> SEMICOLON
Rule 76    stmt -> expr SEMICOLON
Rule 77    inner_stmts -> inner_stmts inner_stmt
Rule 78    inner_stmts -> empty
Rule 79    inner_stmt -> stmt
Rule 80    inner_stmt -> func_decl
Rule 81    expr -> variable
Rule 82    variable -> base_var
Rule 83    variable -> func_call
Rule 84    func_call -> STRING LPAREN func_params RPAREN
Rule 85    func_params -> func_params COMMA func_param
Rule 86    func_params -> func_param
Rule 87    func_params -> empty
Rule 88    func_param -> expr
Rule 89    func_param -> BIT_AND variable
Rule 90    base_var -> base_var LBRACKET dim_offset RBRACKET
Rule 91    base_var -> base_var LBRACE expr RBRACE
Rule 92    base_var -> IDENTIFIER
Rule 93    dim_offset -> expr
Rule 94    dim_offset -> empty
Rule 95    expr -> variable EQUAL expr
Rule 96    expr -> variable EQUAL BIT_AND expr
Rule 97    expr -> CLONE expr
Rule 98    scalar -> CONST_DECIMAL
Rule 99    scalar -> CONST_DOUBLE
Rule 100   scalar -> CONST_STRING
Rule 101   scalar -> NULL
Rule 102   scalar -> TRUE
Rule 103   scalar -> FALSE
Rule 104   scalar -> PLUS scalar
Rule 105   scalar -> MINUS scalar
Rule 106   scalar -> ARRAY LPAREN scalar_array_pair_list RPAREN
Rule 107   scalar_array_pair_list -> empty
Rule 108   scalar_array_pair_list -> scalar_non_empty_array_pair_list possible_comma
Rule 109   scalar_non_empty_array_pair_list -> scalar_non_empty_array_pair_list COMMA scalar
Rule 110   scalar_non_empty_array_pair_list -> scalar
Rule 111   scalar_non_empty_array_pair_list -> scalar_non_empty_array_pair_list COMMA scalar DOUBLE_ARROW scalar
Rule 112   scalar_non_empty_array_pair_list -> scalar DOUBLE_ARROW scalar
Rule 113   expr -> ARRAY LPAREN array_pair_list RPAREN
Rule 114   array_pair_list -> empty
Rule 115   array_pair_list -> non_empty_array_pair_list possible_comma
Rule 116   possible_comma -> empty
Rule 117   possible_comma -> COMMA
Rule 118   non_empty_array_pair_list -> non_empty_array_pair_list COMMA BIT_AND variable
Rule 119   non_empty_array_pair_list -> non_empty_array_pair_list COMMA expr
Rule 120   non_empty_array_pair_list -> BIT_AND variable
Rule 121   non_empty_array_pair_list -> expr
Rule 122   non_empty_array_pair_list -> non_empty_array_pair_list COMMA expr DOUBLE_ARROW BIT_AND variable
Rule 123   non_empty_array_pair_list -> non_empty_array_pair_list COMMA expr DOUBLE_ARROW expr
Rule 124   non_empty_array_pair_list -> expr DOUBLE_ARROW BIT_AND variable
Rule 125   non_empty_array_pair_list -> expr DOUBLE_ARROW expr
Rule 126   expr -> variable PLUS_EQ expr
Rule 127   expr -> variable MINUS_EQ expr
Rule 128   expr -> variable MULTIPLY_EQ expr
Rule 129   expr -> variable DIVIDE_EQ expr
Rule 130   expr -> variable DOT_EQ expr
Rule 131   expr -> variable MOD_EQ expr
Rule 132   expr -> expr AND_OP expr
Rule 133   expr -> expr OR_OP expr
Rule 134   expr -> expr BIT_OR expr
Rule 135   expr -> expr BIT_XOR expr
Rule 136   expr -> expr BIT_AND expr
Rule 137   expr -> expr DOT expr
Rule 138   expr -> expr PLUS expr
Rule 139   expr -> expr MINUS expr
Rule 140   expr -> expr MULT expr
Rule 141   expr -> expr DIV expr
Rule 142   expr -> expr BIT_LSHIFT expr
Rule 143   expr -> expr BIT_RSHIFT expr
Rule 144   expr -> expr MOD expr
Rule 145   expr -> expr IDENTICAL expr
Rule 146   expr -> expr NOT_IDENTICAL expr
Rule 147   expr -> expr EQ_EQ expr
Rule 148   expr -> expr NOT_EQ expr
Rule 149   expr -> expr LESSER expr
Rule 150   expr -> expr LESSER_EQ expr
Rule 151   expr -> expr GREATER expr
Rule 152   expr -> expr GREATER_EQ expr
Rule 153   expr -> expr INSTANCEOF expr
Rule 154   expr -> PLUS expr
Rule 155   expr -> MINUS expr
Rule 156   expr -> BIT_NOT expr
Rule 157   expr -> NOT expr
Rule 158   expr -> CONST_DECIMAL
Rule 159   expr -> CONST_DOUBLE
Rule 160   expr -> CONST_STRING
Rule 161   expr -> NULL
Rule 162   expr -> TRUE
Rule 163   expr -> FALSE
Rule 164   expr -> expr COND_OP expr COLON expr
Rule 165   expr -> INC variable
Rule 166   expr -> DEC variable
Rule 167   expr -> variable INC
Rule 168   expr -> variable DEC
Rule 169   expr -> EMPTY LPAREN expr RPAREN
Rule 170   expr -> EVAL LPAREN expr RPAREN
Rule 171   expr -> LPAREN expr RPAREN
Rule 172   expr -> INCLUDE expr
Rule 173   expr -> INCLUDE_ONCE expr
Rule 174   expr -> REQUIRE expr
Rule 175   expr -> REQUIRE_ONCE expr
Rule 176   expr -> EXIT
Rule 177   expr -> EXIT LPAREN RPAREN
Rule 178   expr -> EXIT LPAREN expr RPAREN
Rule 179   expr -> PRINT expr
Rule 180   empty -> <empty>

Terminals, with rules where they appear

ABSTRACT             : 
ACCESS_OP            : 
AND                  : 
AND_OP               : 132
ARRAY                : 106 113
AS                   : 40
BIT_AND              : 16 18 42 89 96 118 120 122 124 136
BIT_LSHIFT           : 142
BIT_NOT              : 156
BIT_OR               : 134
BIT_RSHIFT           : 143
BIT_XOR              : 135
BREAK                : 57 58
CALLABLE             : 
CASE                 : 53
CATCH                : 
CLASS                : 
CLONE                : 97
COLON                : 26 27 28 31 39 46 50 51 55 164
COMMA                : 7 12 36 64 67 72 85 109 111 117 118 119 122 123
COND_COLON           : 
COND_OP              : 164
CONST                : 
CONST_BINARY         : 
CONST_DECIMAL        : 98 158
CONST_DOUBLE         : 99 159
CONST_HEX            : 
CONST_OCTAL          : 
CONST_STRING         : 100 160
CONTINUE             : 59 60
DEC                  : 166 168
DECLARE              : 
DEFAULT              : 54
DIE                  : 
DIV                  : 141
DIVIDE_EQ            : 129
DO                   : 32
DOT                  : 137
DOT_EQ               : 130
DOUBLE_ARROW         : 44 111 112 122 123 124 125
ECHO                 : 71
ELSE                 : 22 26
ELSEIF               : 24 28
EMPTY                : 169
ENDDECLARE           : 
ENDFOR               : 39
ENDFOREACH           : 46
ENDIF                : 25 26
ENDSWITCH            : 50 51
ENDWHILE             : 31
END_TAG              : 
EQUAL                : 9 17 18 69 95 96
EQ_EQ                : 147
EVAL                 : 170
EXIT                 : 176 177 178
EXPONENT             : 
EXTENDS              : 
FALSE                : 103 163
FINAL                : 
FOR                  : 33
FOREACH              : 40
FUNCTION             : 11
GLOBAL               : 63
GOTO                 : 
GREATER              : 151
GREATER_EQ           : 152
IDENTICAL            : 145
IDENTIFIER           : 9 10 15 16 17 18 41 42 64 65 69 70 92
IF                   : 23 27
IMPLEMENTS           : 
INC                  : 165 167
INCLUDE              : 172
INCLUDE_ONCE         : 173
INSTANCEOF           : 153
INSTEADOF            : 
INTERFACE            : 
ISSET                : 
LBRACE               : 11 48 49 74 91
LBRACKET             : 90
LESSER               : 149
LESSER_EQ            : 150
LIST                 : 
LPAREN               : 11 23 24 27 28 29 32 33 40 47 84 106 113 169 170 171 177 178
MINUS                : 105 139 155
MINUS_EQ             : 127
MOD                  : 144
MOD_EQ               : 131
MULT                 : 140
MULTIPLY_EQ          : 128
NAMESPACE            : 
NEW                  : 
NOT                  : 157
NOT_EQ               : 148
NOT_IDENTICAL        : 146
NULL                 : 101 161
OR                   : 
OR_OP                : 133
PLUS                 : 104 138 154
PLUS_EQ              : 126
PRINT                : 179
PRIVATE              : 
PROTECTED            : 
PUBLIC               : 
QUOTE                : 
RBRACE               : 11 48 49 74 91
RBRACKET             : 90
REQUIRE              : 174
REQUIRE_ONCE         : 175
RETURN               : 61 62
RPAREN               : 11 23 24 27 28 29 32 33 40 47 84 106 113 169 170 171 177 178
SEMICOLON            : 6 25 26 31 32 33 33 39 46 49 50 51 51 56 57 58 59 60 61 62 63 66 71 75 76
START_TAG            : 
STATIC               : 66
STRING               : 11 84
SWITCH               : 47
THROW                : 
TRAIT                : 
TRUE                 : 102 162
TRY                  : 
UNSET                : 
USE                  : 
VAR                  : 6
WHILE                : 29 32
XOR                  : 
__CLASS__            : 
__DIR__              : 
__FILE__             : 
__FUNCTION__         : 
__HALT_COMPILER      : 
__LINE__             : 
__METHOD__           : 
__NAMESPACE__        : 
__TRAIT__            : 
error                : 

Nonterminals, with rules where they appear

alt_if_stmt          : 20
alt_if_stmt_without_else : 25 26 28
array_pair_list      : 113
base_var             : 82 90 91
case_separator       : 53 54
case_stmt            : 48 49 50 51 53 54
const_decl           : 7 8
const_decls          : 6 7
dim_offset           : 90
echo_expr_list       : 71 72
empty                : 3 14 34 43 52 78 87 94 107 114 116
expr                 : 9 23 24 27 28 29 32 36 37 40 47 53 58 60 62 72 73 76 88 91 93 95 96 97 119 121 122 123 123 124 125 125 126 127 128 129 130 131 132 132 133 133 134 134 135 135 136 136 137 137 138 138 139 139 140 140 141 141 142 142 143 143 144 144 145 145 146 146 147 147 148 148 149 149 150 150 151 151 152 152 153 153 154 155 156 157 164 164 164 169 170 171 172 173 174 175 178 179
for_expr             : 33 33 33
for_stmt             : 33
foreach_arg          : 40
foreach_stmt         : 40
foreach_var          : 40 44
func_call            : 83
func_decl            : 5 80
func_param           : 85 86
func_params          : 84 85
global_var_list      : 63 64
if_stmt              : 19
if_stmt_without_else : 21 22 24
inner_stmt           : 77
inner_stmts          : 11 26 27 28 31 39 46 53 54 74 77
non_empty_array_pair_list : 115 118 119 122 123
non_empty_for_expr   : 35 36
param                : 12 13
params               : 11 12
possible_comma       : 108 115
scalar               : 17 18 69 104 105 109 110 111 111 112 112
scalar_array_pair_list : 106
scalar_non_empty_array_pair_list : 108 109 111
start                : 0
static_var           : 67 68
static_var_list      : 66 67
stmt                 : 4 22 23 24 30 32 38 45 79
stmt_list            : 1 2
switch_stmt          : 47
top_stmt             : 2
variable             : 81 89 95 96 118 120 122 124 126 127 128 129 130 131 165 166 167 168
while_stmt           : 29


Parsing method: LALR


state 0

    (0) S' -> . start
    (1) start -> . stmt_list
    (2) stmt_list -> . stmt_list top_stmt
    (3) stmt_list -> . empty
    (180) empty -> .

    VAR             reduce using rule 180 (empty -> .)
    WHILE           reduce using rule 180 (empty -> .)
    DO              reduce using rule 180 (empty -> .)
    FOR             reduce using rule 180 (empty -> .)
    FOREACH         reduce using rule 180 (empty -> .)
    SWITCH          reduce using rule 180 (empty -> .)
    BREAK           reduce using rule 180 (empty -> .)
    CONTINUE        reduce using rule 180 (empty -> .)
    RETURN          reduce using rule 180 (empty -> .)
    GLOBAL          reduce using rule 180 (empty -> .)
    STATIC          reduce using rule 180 (empty -> .)
    ECHO            reduce using rule 180 (empty -> .)
    LBRACE          reduce using rule 180 (empty -> .)
    SEMICOLON       reduce using rule 180 (empty -> .)
    FUNCTION        reduce using rule 180 (empty -> .)
    CLONE           reduce using rule 180 (empty -> .)
    ARRAY           reduce using rule 180 (empty -> .)
    PLUS            reduce using rule 180 (empty -> .)
    MINUS           reduce using rule 180 (empty -> .)
    BIT_NOT         reduce using rule 180 (empty -> .)
    NOT             reduce using rule 180 (empty -> .)
    CONST_DECIMAL   reduce using rule 180 (empty -> .)
    CONST_DOUBLE    reduce using rule 180 (empty -> .)
    CONST_STRING    reduce using rule 180 (empty -> .)
    NULL            reduce using rule 180 (empty -> .)
    TRUE            reduce using rule 180 (empty -> .)
    FALSE           reduce using rule 180 (empty -> .)
    INC             reduce using rule 180 (empty -> .)
    DEC             reduce using rule 180 (empty -> .)
    EMPTY           reduce using rule 180 (empty -> .)
    EVAL            reduce using rule 180 (empty -> .)
    LPAREN          reduce using rule 180 (empty -> .)
    INCLUDE         reduce using rule 180 (empty -> .)
    INCLUDE_ONCE    reduce using rule 180 (empty -> .)
    REQUIRE         reduce using rule 180 (empty -> .)
    REQUIRE_ONCE    reduce using rule 180 (empty -> .)
    EXIT            reduce using rule 180 (empty -> .)
    PRINT           reduce using rule 180 (empty -> .)
    IF              reduce using rule 180 (empty -> .)
    IDENTIFIER      reduce using rule 180 (empty -> .)
    STRING          reduce using rule 180 (empty -> .)
    $end            reduce using rule 180 (empty -> .)


    stmt_list                      shift and go to state 1
    start                          shift and go to state 2
    empty                          shift and go to state 3

state 1

    (1) start -> stmt_list .
    (2) stmt_list -> stmt_list . top_stmt
    (4) top_stmt -> . stmt
    (5) top_stmt -> . func_decl
    (6) top_stmt -> . VAR const_decls SEMICOLON
    (19) stmt -> . if_stmt
    (20) stmt -> . alt_if_stmt
    (29) stmt -> . WHILE LPAREN expr RPAREN while_stmt
    (32) stmt -> . DO stmt WHILE LPAREN expr RPAREN SEMICOLON
    (33) stmt -> . FOR LPAREN for_expr SEMICOLON for_expr SEMICOLON for_expr RPAREN for_stmt
    (40) stmt -> . FOREACH LPAREN expr AS foreach_var foreach_arg RPAREN foreach_stmt
    (47) stmt -> . SWITCH LPAREN expr RPAREN switch_stmt
    (57) stmt -> . BREAK SEMICOLON
    (58) stmt -> . BREAK expr SEMICOLON
    (59) stmt -> . CONTINUE SEMICOLON
    (60) stmt -> . CONTINUE expr SEMICOLON
    (61) stmt -> . RETURN SEMICOLON
    (62) stmt -> . RETURN expr SEMICOLON
    (63) stmt -> . GLOBAL global_var_list SEMICOLON
    (66) stmt -> . STATIC static_var_list SEMICOLON
    (71) stmt -> . ECHO echo_expr_list SEMICOLON
    (74) stmt -> . LBRACE inner_stmts RBRACE
    (75) stmt -> . SEMICOLON
    (76) stmt -> . expr SEMICOLON
    (11) func_decl -> . FUNCTION STRING LPAREN params RPAREN LBRACE inner_stmts RBRACE
    (21) if_stmt -> . if_stmt_without_else
    (22) if_stmt -> . if_stmt_without_else ELSE stmt
    (25) alt_if_stmt -> . alt_if_stmt_without_else ENDIF SEMICOLON
    (26) alt_if_stmt -> . alt_if_stmt_without_else ELSE COLON inner_stmts ENDIF SEMICOLON
    (81) expr -> . variable
    (95) expr -> . variable EQUAL expr
    (96) expr -> . variable EQUAL BIT_AND expr
    (97) expr -> . CLONE expr
    (113) expr -> . ARRAY LPAREN array_pair_list RPAREN
    (126) expr -> . variable PLUS_EQ expr
    (127) expr -> . variable MINUS_EQ expr
    (128) expr -> . variable MULTIPLY_EQ expr
    (129) expr -> . variable DIVIDE_EQ expr
    (130) expr -> . variable DOT_EQ expr
    (131) expr -> . variable MOD_EQ expr
    (132) expr -> . expr AND_OP expr
    (133) expr -> . expr OR_OP expr
    (134) expr -> . expr BIT_OR expr
    (135) expr -> . expr BIT_XOR expr
    (136) expr -> . expr BIT_AND expr
    (137) expr -> . expr DOT expr
    (138) expr -> . expr PLUS expr
    (139) expr -> . expr MINUS expr
    (140) expr -> . expr MULT expr
    (141) expr -> . expr DIV expr
    (142) expr -> . expr BIT_LSHIFT expr
    (143) expr -> . expr BIT_RSHIFT expr
    (144) expr -> . expr MOD expr
    (145) expr -> . expr IDENTICAL expr
    (146) expr -> . expr NOT_IDENTICAL expr
    (147) expr -> . expr EQ_EQ expr
    (148) expr -> . expr NOT_EQ expr
    (149) expr -> . expr LESSER expr
    (150) expr -> . expr LESSER_EQ expr
    (151) expr -> . expr GREATER expr
    (152) expr -> . expr GREATER_EQ expr
    (153) expr -> . expr INSTANCEOF expr
    (154) expr -> . PLUS expr
    (155) expr -> . MINUS expr
    (156) expr -> . BIT_NOT expr
    (157) expr -> . NOT expr
    (158) expr -> . CONST_DECIMAL
    (159) expr -> . CONST_DOUBLE
    (160) expr -> . CONST_STRING
    (161) expr -> . NULL
    (162) expr -> . TRUE
    (163) expr -> . FALSE
    (164) expr -> . expr COND_OP expr COLON expr
    (165) expr -> . INC variable
    (166) expr -> . DEC variable
    (167) expr -> . variable INC
    (168) expr -> . variable DEC
    (169) expr -> . EMPTY LPAREN expr RPAREN
    (170) expr -> . EVAL LPAREN expr RPAREN
    (171) expr -> . LPAREN expr RPAREN
    (172) expr -> . INCLUDE expr
    (173) expr -> . INCLUDE_ONCE expr
    (174) expr -> . REQUIRE expr
    (175) expr -> . REQUIRE_ONCE expr
    (176) expr -> . EXIT
    (177) expr -> . EXIT LPAREN RPAREN
    (178) expr -> . EXIT LPAREN expr RPAREN
    (179) expr -> . PRINT expr
    (23) if_stmt_without_else -> . IF LPAREN expr RPAREN stmt
    (24) if_stmt_without_else -> . if_stmt_without_else ELSEIF LPAREN expr RPAREN stmt
    (27) alt_if_stmt_without_else -> . IF LPAREN expr RPAREN COLON inner_stmts
    (28) alt_if_stmt_without_else -> . alt_if_stmt_without_else ELSEIF LPAREN expr RPAREN COLON inner_stmts
    (82) variable -> . base_var
    (83) variable -> . func_call
    (90) base_var -> . base_var LBRACKET dim_offset RBRACKET
    (91) base_var -> . base_var LBRACE expr RBRACE
    (92) base_var -> . IDENTIFIER
    (84) func_call -> . STRING LPAREN func_params RPAREN

    $end            reduce using rule 1 (start -> stmt_list .)
    VAR             shift and go to state 12
    WHILE           shift and go to state 34
    DO              shift and go to state 49
    FOR             shift and go to state 25
    FOREACH         shift and go to state 10
    SWITCH          shift and go to state 37
    BREAK           shift and go to state 47
    CONTINUE        shift and go to state 31
    RETURN          shift and go to state 17
    GLOBAL          shift and go to state 33
    STATIC          shift and go to state 19
    ECHO            shift and go to state 28
    LBRACE          shift and go to state 30
    SEMICOLON       shift and go to state 36
    FUNCTION        shift and go to state 24
    CLONE           shift and go to state 15
    ARRAY           shift and go to state 38
    PLUS            shift and go to state 8
    MINUS           shift and go to state 6
    BIT_NOT         shift and go to state 9
    NOT             shift and go to state 32
    CONST_DECIMAL   shift and go to state 7
    CONST_DOUBLE    shift and go to state 23
    CONST_STRING    shift and go to state 46
    NULL            shift and go to state 50
    TRUE            shift and go to state 5
    FALSE           shift and go to state 44
    INC             shift and go to state 55
    DEC             shift and go to state 21
    EMPTY           shift and go to state 22
    EVAL            shift and go to state 11
    LPAREN          shift and go to state 52
    INCLUDE         shift and go to state 35
    INCLUDE_ONCE    shift and go to state 13
    REQUIRE         shift and go to state 18
    REQUIRE_ONCE    shift and go to state 29
    EXIT            shift and go to state 48
    PRINT           shift and go to state 20
    IF              shift and go to state 54
    IDENTIFIER      shift and go to state 39
    STRING          shift and go to state 51


    alt_if_stmt_without_else       shift and go to state 4
    func_call                      shift and go to state 40
    func_decl                      shift and go to state 41
    alt_if_stmt                    shift and go to state 26
    stmt                           shift and go to state 27
    variable                       shift and go to state 53
    if_stmt_without_else           shift and go to state 42
    base_var                       shift and go to state 43
    if_stmt                        shift and go to state 14
    expr                           shift and go to state 45
    top_stmt                       shift and go to state 16

state 2

    (0) S' -> start .




state 3

    (3) stmt_list -> empty .

    VAR             reduce using rule 3 (stmt_list -> empty .)
    WHILE           reduce using rule 3 (stmt_list -> empty .)
    DO              reduce using rule 3 (stmt_list -> empty .)
    FOR             reduce using rule 3 (stmt_list -> empty .)
    FOREACH         reduce using rule 3 (stmt_list -> empty .)
    SWITCH          reduce using rule 3 (stmt_list -> empty .)
    BREAK           reduce using rule 3 (stmt_list -> empty .)
    CONTINUE        reduce using rule 3 (stmt_list -> empty .)
    RETURN          reduce using rule 3 (stmt_list -> empty .)
    GLOBAL          reduce using rule 3 (stmt_list -> empty .)
    STATIC          reduce using rule 3 (stmt_list -> empty .)
    ECHO            reduce using rule 3 (stmt_list -> empty .)
    LBRACE          reduce using rule 3 (stmt_list -> empty .)
    SEMICOLON       reduce using rule 3 (stmt_list -> empty .)
    FUNCTION        reduce using rule 3 (stmt_list -> empty .)
    CLONE           reduce using rule 3 (stmt_list -> empty .)
    ARRAY           reduce using rule 3 (stmt_list -> empty .)
    PLUS            reduce using rule 3 (stmt_list -> empty .)
    MINUS           reduce using rule 3 (stmt_list -> empty .)
    BIT_NOT         reduce using rule 3 (stmt_list -> empty .)
    NOT             reduce using rule 3 (stmt_list -> empty .)
    CONST_DECIMAL   reduce using rule 3 (stmt_list -> empty .)
    CONST_DOUBLE    reduce using rule 3 (stmt_list -> empty .)
    CONST_STRING    reduce using rule 3 (stmt_list -> empty .)
    NULL            reduce using rule 3 (stmt_list -> empty .)
    TRUE            reduce using rule 3 (stmt_list -> empty .)
    FALSE           reduce using rule 3 (stmt_list -> empty .)
    INC             reduce using rule 3 (stmt_list -> empty .)
    DEC             reduce using rule 3 (stmt_list -> empty .)
    EMPTY           reduce using rule 3 (stmt_list -> empty .)
    EVAL            reduce using rule 3 (stmt_list -> empty .)
    LPAREN          reduce using rule 3 (stmt_list -> empty .)
    INCLUDE         reduce using rule 3 (stmt_list -> empty .)
    INCLUDE_ONCE    reduce using rule 3 (stmt_list -> empty .)
    REQUIRE         reduce using rule 3 (stmt_list -> empty .)
    REQUIRE_ONCE    reduce using rule 3 (stmt_list -> empty .)
    EXIT            reduce using rule 3 (stmt_list -> empty .)
    PRINT           reduce using rule 3 (stmt_list -> empty .)
    IF              reduce using rule 3 (stmt_list -> empty .)
    IDENTIFIER      reduce using rule 3 (stmt_list -> empty .)
    STRING          reduce using rule 3 (stmt_list -> empty .)
    $end            reduce using rule 3 (stmt_list -> empty .)



state 4

    (25) alt_if_stmt -> alt_if_stmt_without_else . ENDIF SEMICOLON
    (26) alt_if_stmt -> alt_if_stmt_without_else . ELSE COLON inner_stmts ENDIF SEMICOLON
    (28) alt_if_stmt_without_else -> alt_if_stmt_without_else . ELSEIF LPAREN expr RPAREN COLON inner_stmts

    ENDIF           shift and go to state 57
    ELSE            shift and go to state 56
    ELSEIF          shift and go to state 58



state 5

    (162) expr -> TRUE .

    SEMICOLON       reduce using rule 162 (expr -> TRUE .)
    AND_OP          reduce using rule 162 (expr -> TRUE .)
    OR_OP           reduce using rule 162 (expr -> TRUE .)
    BIT_OR          reduce using rule 162 (expr -> TRUE .)
    BIT_XOR         reduce using rule 162 (expr -> TRUE .)
    BIT_AND         reduce using rule 162 (expr -> TRUE .)
    DOT             reduce using rule 162 (expr -> TRUE .)
    PLUS            reduce using rule 162 (expr -> TRUE .)
    MINUS           reduce using rule 162 (expr -> TRUE .)
    MULT            reduce using rule 162 (expr -> TRUE .)
    DIV             reduce using rule 162 (expr -> TRUE .)
    BIT_LSHIFT      reduce using rule 162 (expr -> TRUE .)
    BIT_RSHIFT      reduce using rule 162 (expr -> TRUE .)
    MOD             reduce using rule 162 (expr -> TRUE .)
    IDENTICAL       reduce using rule 162 (expr -> TRUE .)
    NOT_IDENTICAL   reduce using rule 162 (expr -> TRUE .)
    EQ_EQ           reduce using rule 162 (expr -> TRUE .)
    NOT_EQ          reduce using rule 162 (expr -> TRUE .)
    LESSER          reduce using rule 162 (expr -> TRUE .)
    LESSER_EQ       reduce using rule 162 (expr -> TRUE .)
    GREATER         reduce using rule 162 (expr -> TRUE .)
    GREATER_EQ      reduce using rule 162 (expr -> TRUE .)
    INSTANCEOF      reduce using rule 162 (expr -> TRUE .)
    COND_OP         reduce using rule 162 (expr -> TRUE .)
    COMMA           reduce using rule 162 (expr -> TRUE .)
    RPAREN          reduce using rule 162 (expr -> TRUE .)
    AS              reduce using rule 162 (expr -> TRUE .)
    DOUBLE_ARROW    reduce using rule 162 (expr -> TRUE .)
    RBRACE          reduce using rule 162 (expr -> TRUE .)
    RBRACKET        reduce using rule 162 (expr -> TRUE .)
    COLON           reduce using rule 162 (expr -> TRUE .)



state 6
